ctre-phoenix6-sys/src/bindings.rs

/* automatically generated by rust-bindgen 0.69.1 */

pub const PHOENIX_VERSION: u32 = 1572864;
pub const _VCRT_COMPILER_PREPROCESSOR: u32 = 1;
pub const _SAL_VERSION: u32 = 20;
pub const __SAL_H_VERSION: u32 = 180000000;
pub const _USE_DECLSPECS_FOR_SAL: u32 = 0;
pub const _USE_ATTRIBUTES_FOR_SAL: u32 = 0;
pub const _CRT_PACKING: u32 = 8;
pub const _HAS_EXCEPTIONS: u32 = 1;
pub const _STL_LANG: u32 = 0;
pub const _HAS_CXX17: u32 = 0;
pub const _HAS_CXX20: u32 = 0;
pub const _HAS_CXX23: u32 = 0;
pub const _HAS_NODISCARD: u32 = 0;
pub const WCHAR_MIN: u32 = 0;
pub const WCHAR_MAX: u32 = 65535;
pub const WINT_MIN: u32 = 0;
pub const WINT_MAX: u32 = 65535;
pub const __bool_true_false_are_defined: u32 = 1;
pub const false_: u32 = 0;
pub const true_: u32 = 1;
pub const _ARM_WINAPI_PARTITION_DESKTOP_SDK_AVAILABLE: u32 = 1;
pub const _CRT_BUILD_DESKTOP_APP: u32 = 1;
pub const _ARGMAX: u32 = 100;
pub const _CRT_INT_MAX: u32 = 2147483647;
pub const _CRT_FUNCTIONS_REQUIRED: u32 = 1;
pub const _CRT_HAS_CXX17: u32 = 0;
pub const _CRT_HAS_C11: u32 = 1;
pub const _CRT_INTERNAL_NONSTDC_NAMES: u32 = 1;
pub const __STDC_SECURE_LIB__: u32 = 200411;
pub const __GOT_SECURE_LIB__: u32 = 200411;
pub const __STDC_WANT_SECURE_LIB__: u32 = 1;
pub const _SECURECRT_FILL_BUFFER_PATTERN: u32 = 254;
pub const _CRT_SECURE_CPP_OVERLOAD_STANDARD_NAMES: u32 = 0;
pub const _CRT_SECURE_CPP_OVERLOAD_STANDARD_NAMES_COUNT: u32 = 0;
pub const _CRT_SECURE_CPP_OVERLOAD_SECURE_NAMES: u32 = 1;
pub const _CRT_SECURE_CPP_OVERLOAD_STANDARD_NAMES_MEMORY: u32 = 0;
pub const _CRT_SECURE_CPP_OVERLOAD_SECURE_NAMES_MEMORY: u32 = 0;
pub const kPhoenixVersion: ::std::os::raw::c_int = 1572864;
pub type va_list = *mut ::std::os::raw::c_char;
extern "C" {
    pub fn __va_start(arg1: *mut *mut ::std::os::raw::c_char, ...);
}
pub type __vcrt_bool = bool;
pub type wchar_t = ::std::os::raw::c_ushort;
extern "C" {
    pub fn __security_init_cookie();
}
extern "C" {
    pub fn __security_check_cookie(_StackCookie: usize);
}
extern "C" {
    pub fn __report_gsfailure(_StackCookie: usize) -> !;
}
extern "C" {
    pub static mut __security_cookie: usize;
}
pub type int_least8_t = ::std::os::raw::c_schar;
pub type int_least16_t = ::std::os::raw::c_short;
pub type int_least32_t = ::std::os::raw::c_int;
pub type int_least64_t = ::std::os::raw::c_longlong;
pub type uint_least8_t = ::std::os::raw::c_uchar;
pub type uint_least16_t = ::std::os::raw::c_ushort;
pub type uint_least32_t = ::std::os::raw::c_uint;
pub type uint_least64_t = ::std::os::raw::c_ulonglong;
pub type int_fast8_t = ::std::os::raw::c_schar;
pub type int_fast16_t = ::std::os::raw::c_int;
pub type int_fast32_t = ::std::os::raw::c_int;
pub type int_fast64_t = ::std::os::raw::c_longlong;
pub type uint_fast8_t = ::std::os::raw::c_uchar;
pub type uint_fast16_t = ::std::os::raw::c_uint;
pub type uint_fast32_t = ::std::os::raw::c_uint;
pub type uint_fast64_t = ::std::os::raw::c_ulonglong;
pub type intmax_t = ::std::os::raw::c_longlong;
pub type uintmax_t = ::std::os::raw::c_ulonglong;
extern "C" {
    #[doc = " Creates the Phoenix Diagnostic Server on the default port"]
    pub fn c_Phoenix_Diagnostics_Create();
}
extern "C" {
    #[doc = " Creates the Phoenix Diagnostic Server on the given port"]
    pub fn c_Phoenix_Diagnostics_Create_On_Port(port: ::std::os::raw::c_int);
}
extern "C" {
    #[doc = " Sets the number of seconds after which the Phoenix Diagnostic Server will start"]
    pub fn c_Phoenix_Diagnostics_SetSecondsToStart(secondsToStart: f64);
}
extern "C" {
    #[doc = " Allows the program to terminate early from a remote shutdown command (disabled by default)"]
    pub fn c_Phoenix_Diagnostics_EnableEarlyShutdown();
}
extern "C" {
    #[doc = " Safely disposes of the Phoenix Diagnostic Server"]
    pub fn c_Phoenix_Diagnostics_Dispose();
}
pub const _Context_ContextAPI: _Context = 0;
pub const _Context_ContextDiagServer: _Context = 1;
pub type _Context = ::std::os::raw::c_int;
pub use self::_Context as Context;
extern "C" {
    pub fn c_ctre_phoenix6_get_current_time_seconds() -> f64;
}
extern "C" {
    pub fn c_ctre_phoenix6_is_simulation() -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn c_ctre_phoenix6_platform_canbus_sendmessage(
        messageId: u32,
        data: *const u8,
        dataSize: u8,
        canbus: *const ::std::os::raw::c_char,
        printErr: bool,
    );
}
extern "C" {
    pub fn c_ctre_phoenix6_platform_canbus_receivemessage(
        messageId: u32,
        data: *mut u8,
        dataSize: *mut u8,
        canbus: *const ::std::os::raw::c_char,
        printErr: bool,
    ) -> i32;
}
extern "C" {
    pub fn c_ctre_phoenix6_platform_set_logger_path(path: *const ::std::os::raw::c_char) -> i32;
}
extern "C" {
    pub fn c_ctre_phoenix6_platform_start_logger() -> i32;
}
extern "C" {
    pub fn c_ctre_phoenix6_platform_stop_logger() -> i32;
}
extern "C" {
    pub fn c_ctre_phoenix6_platform_enable_auto_logging(enable: bool) -> i32;
}
extern "C" {
    pub fn c_ctre_phoenix6_platform_write_raw(
        name: *const ::std::os::raw::c_char,
        data: *const u8,
        size: u8,
    ) -> i32;
}
extern "C" {
    pub fn c_ctre_phoenix6_platform_write_boolean(
        name: *const ::std::os::raw::c_char,
        value: bool,
    ) -> i32;
}
extern "C" {
    pub fn c_ctre_phoenix6_platform_write_integer(
        name: *const ::std::os::raw::c_char,
        value: i64,
        units: *const ::std::os::raw::c_char,
    ) -> i32;
}
extern "C" {
    pub fn c_ctre_phoenix6_platform_write_float(
        name: *const ::std::os::raw::c_char,
        value: f32,
        units: *const ::std::os::raw::c_char,
    ) -> i32;
}
extern "C" {
    pub fn c_ctre_phoenix6_platform_write_double(
        name: *const ::std::os::raw::c_char,
        value: f64,
        units: *const ::std::os::raw::c_char,
    ) -> i32;
}
extern "C" {
    pub fn c_ctre_phoenix6_platform_write_string(
        name: *const ::std::os::raw::c_char,
        value: *const ::std::os::raw::c_char,
    ) -> i32;
}
extern "C" {
    pub fn c_ctre_phoenix6_platform_write_boolean_array(
        name: *const ::std::os::raw::c_char,
        values: *const bool,
        count: u8,
    ) -> i32;
}
extern "C" {
    pub fn c_ctre_phoenix6_platform_write_integer_array(
        name: *const ::std::os::raw::c_char,
        values: *const i64,
        count: u8,
        units: *const ::std::os::raw::c_char,
    ) -> i32;
}
extern "C" {
    pub fn c_ctre_phoenix6_platform_write_float_array(
        name: *const ::std::os::raw::c_char,
        values: *const f32,
        count: u8,
        units: *const ::std::os::raw::c_char,
    ) -> i32;
}
extern "C" {
    pub fn c_ctre_phoenix6_platform_write_double_array(
        name: *const ::std::os::raw::c_char,
        values: *const f64,
        count: u8,
        units: *const ::std::os::raw::c_char,
    ) -> i32;
}
extern "C" {
    pub fn c_ctre_phoenix6_encode_device(
        deviceId: ::std::os::raw::c_int,
        model: *const ::std::os::raw::c_char,
        canbus: *const ::std::os::raw::c_char,
        deviceEncoding: *mut u32,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn c_ctre_phoenix6_set_configs(
        context: ::std::os::raw::c_int,
        network: *const ::std::os::raw::c_char,
        deviceHash: ::std::os::raw::c_int,
        timeoutSeconds: f64,
        values: *const ::std::os::raw::c_char,
        value_len: u32,
        futureProofConfigs: bool,
        overrideIfDuplicate: bool,
        useDid: bool,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn c_ctre_phoenix6_get_configs(
        context: ::std::os::raw::c_int,
        network: *const ::std::os::raw::c_char,
        deviceHash: ::std::os::raw::c_int,
        timeoutSeconds: f64,
        str_: *mut *mut ::std::os::raw::c_char,
        useDid: bool,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn c_ctre_phoenix6_get_configs_no_malloc(
        context: Context,
        network: *const ::std::os::raw::c_char,
        deviceHash: ::std::os::raw::c_int,
        timeoutSeconds: f64,
        str_: *mut ::std::os::raw::c_char,
        str_len: u32,
        useDid: bool,
    ) -> ::std::os::raw::c_int;
}
pub type __crt_bool = bool;
extern "C" {
    pub fn _invalid_parameter_noinfo();
}
extern "C" {
    pub fn _invalid_parameter_noinfo_noreturn() -> !;
}
extern "C" {
    pub fn _invoke_watson(
        _Expression: *const wchar_t,
        _FunctionName: *const wchar_t,
        _FileName: *const wchar_t,
        _LineNo: ::std::os::raw::c_uint,
        _Reserved: usize,
    ) -> !;
}
pub type errno_t = ::std::os::raw::c_int;
pub type wint_t = ::std::os::raw::c_ushort;
pub type wctype_t = ::std::os::raw::c_ushort;
pub type __time32_t = ::std::os::raw::c_long;
pub type __time64_t = ::std::os::raw::c_longlong;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct __crt_locale_data_public {
    pub _locale_pctype: *const ::std::os::raw::c_ushort,
    pub _locale_mb_cur_max: ::std::os::raw::c_int,
    pub _locale_lc_codepage: ::std::os::raw::c_uint,
}
#[test]
fn bindgen_test_layout___crt_locale_data_public() {
    const UNINIT: ::std::mem::MaybeUninit<__crt_locale_data_public> =
        ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<__crt_locale_data_public>(),
        16usize,
        concat!("Size of: ", stringify!(__crt_locale_data_public))
    );
    assert_eq!(
        ::std::mem::align_of::<__crt_locale_data_public>(),
        8usize,
        concat!("Alignment of ", stringify!(__crt_locale_data_public))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr)._locale_pctype) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(__crt_locale_data_public),
            "::",
            stringify!(_locale_pctype)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr)._locale_mb_cur_max) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(__crt_locale_data_public),
            "::",
            stringify!(_locale_mb_cur_max)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr)._locale_lc_codepage) as usize - ptr as usize },
        12usize,
        concat!(
            "Offset of field: ",
            stringify!(__crt_locale_data_public),
            "::",
            stringify!(_locale_lc_codepage)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct __crt_locale_pointers {
    pub locinfo: *mut __crt_locale_data,
    pub mbcinfo: *mut __crt_multibyte_data,
}
#[test]
fn bindgen_test_layout___crt_locale_pointers() {
    const UNINIT: ::std::mem::MaybeUninit<__crt_locale_pointers> =
        ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<__crt_locale_pointers>(),
        16usize,
        concat!("Size of: ", stringify!(__crt_locale_pointers))
    );
    assert_eq!(
        ::std::mem::align_of::<__crt_locale_pointers>(),
        8usize,
        concat!("Alignment of ", stringify!(__crt_locale_pointers))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).locinfo) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(__crt_locale_pointers),
            "::",
            stringify!(locinfo)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).mbcinfo) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(__crt_locale_pointers),
            "::",
            stringify!(mbcinfo)
        )
    );
}
pub type _locale_t = *mut __crt_locale_pointers;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _Mbstatet {
    pub _Wchar: ::std::os::raw::c_ulong,
    pub _Byte: ::std::os::raw::c_ushort,
    pub _State: ::std::os::raw::c_ushort,
}
